--- a/Front/src/app/components/pages/products/products.component.html
+++ b/Front/src/app/components/pages/products/products.component.html
@@ -28,15 +28,14 @@
 <div class="products-container">
     <div routerLink="../product/{{ product._id }}" class="product-card" *ngFor="let product of resultList">
         <div class="product-image">
-            <img src="../../../../assets/images/{{ images[product._id] }}"
-            alt="{{ product.name }}" >
-        </div>    
-            <div class="product-text">
-                <h2 class="product-name">{{ product.name }}</h2>
-                <p class="product-description">{{ product.description }}</p>
-            </div>
-            <div class="product-details">
-                <span class="product-price">{{ product.price/100 }} €</span>
-            </div>
+            <img src="../../../../assets/images/{{ images[product._id] }}" alt="{{ product.name }}">
+        </div>
+        <div class="product-text">
+            <h2 class="product-name">{{ product.name }}</h2>
+            <p class="product-description">{{ product.description }}</p>
+        </div>
+        <div class="product-details">
+            <span class="product-price">{{ product.price/100 }} €</span>
+        </div>
 
     </div>
