--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -37,7 +37,7 @@ html {
 
 body {
     // background-color: #353535;
-    background-color: #8989ba;
+    background-color: #7497c3;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.8rem;
     margin: 0;
