--- a/Front/src/app/components/pages/user/user.component.html
+++ b/Front/src/app/components/pages/user/user.component.html
@@ -1,56 +1,59 @@
 <div class="wrapper">
-    <div class="user-panel" *ngIf="isVisitorAdmin; then thenBlock else elseBlock"></div>
-   
+    <div *ngIf="isVisitorAllowed; then thenBlock else elseBlock">
+    </div>
+
     <ng-template #thenBlock>
+        <section id="allowed">
+            <h1 class="title">{{ targetUser.username }}</h1>
 
-        <h1 class="title">{{ targetUser.username }}</h1>
+            <p *ngIf="targetUser.role == 'admin'" class="admin-text">Admin</p>
+            <div class="line">
+                <i class="fa-solid fa-at"></i>
+                <input #email value="{{ targetUser.email }}" class="input-form" type="text" id="email" name="email" />
+            </div>
 
-        <p *ngIf="targetUser.role == 'admin'" class="admin-text">Admin</p>
-        <div class="line">
-            <i class="fa-solid fa-at"></i>
-            <input #email value="{{ targetUser.email }}" class="input-form" type="text" id="email" name="email" />
-        </div>
-        
-        <div class="line">
-            <i class="fa fa-user"></i>
-            <input #username autofocus value="{{ targetUser.username }}" class="input-form" type="text" id="username"
-                name="username" />
-        </div>
-        
-        <div class="line">
-            <i class="fa-solid fa-location-dot"></i>
-            <input #adresse value="{{ targetUser.adresse }}" class="input-form" type="text" id="adresses" name="adresses" />
-        </div>
-        
-        <div class="line">
-            <i class="fa-solid fa-lock"></i>
-                <input #password placeholder="Password" class="input-form" type="password" id="password" name="password" />
-        </div>
-        
-        <button class="button"
-            (click)="userModify(username.value, email.value, adresse.value, '')">Modify
-            account</button>
-        
-        <div class="products-text">
-            <p routerLink="/???" class="products-link">
-                <i class="fa-solid fa-eye"></i>
-                See all of {{ targetUser.username }} products !
-            </p>
-        </div>
-        
-        <button class="button delete" (click)="userDelete()">Delete account</button>
-        <p class="message">{{ message }}</p>
+            <div class="line">
+                <i class="fa fa-user"></i>
+                <input #username autofocus value="{{ targetUser.username }}" class="input-form" type="text"
+                    id="username" name="username" />
+            </div>
+
+            <div class="line">
+                <i class="fa-solid fa-location-dot"></i>
+                <input #adresse value="{{ targetUser.adresse }}" class="input-form" type="text" id="adresses"
+                    name="adresses" />
+            </div>
+
+            <div class="line">
+                <i class="fa-solid fa-lock"></i>
+                <input #password placeholder="Password" class="input-form" type="password" id="password"
+                    name="password" />
+            </div>
+
+            <button class="button" (click)="userModify(username.value, email.value, adresse.value, '')">Modify
+                account</button>
+
+            <div class="products-text">
+                <p routerLink="/???" class="products-link">
+                    <i class="fa-solid fa-eye"></i>
+                    See all of {{ targetUser.username }} products !
+                </p>
+            </div>
+
+            <button class="button delete" (click)="userDelete()">Delete account</button>
+            <p class="message">{{ message }}</p>
+        </section>
     </ng-template>
 
     <ng-template #elseBlock>
-            <section id="forbidden">
-                <h1 class="forbidden-title">403</h1>
-                <h2 class="forbidden-subtitle">
-                    Access Denied.
-                </h2>
-                <h2 class="forbidden-subtitle">
-                    You must be an admin to see this information.
-                </h2>
-            </section>
+        <section id="forbidden">
+            <h1 class="forbidden-title">403</h1>
+            <h2 class="forbidden-subtitle">
+                Access Denied.
+            </h2>
+            <h2 class="forbidden-subtitle">
+                You must be an admin to see this information.
+            </h2>
+        </section>
     </ng-template>
 </div>
