--- a/Front/src/app/components/pages/user/user.component.scss
+++ b/Front/src/app/components/pages/user/user.component.scss
@@ -8,10 +8,9 @@
     width: 100%;
     min-height: 100%;
     padding: 8rem 2rem;
-    background-color: #8989ba;
 }
 
-.user-panel {
+#allowed {
     border-radius: 5px;
     padding: 1rem 2rem 2rem 2rem;
     width: 50rem;
@@ -27,7 +26,7 @@
         border-bottom: 1px solid #eee;
     }
 
-    .admin-text {
+    .admin-text{
         color: var(--gold);
         background-color: var(--dark);
         font-weight: bold;
@@ -102,15 +101,7 @@
         }
     }
 
-    .deactivated{
-        cursor: not-allowed;
-        &:active {
-                border-bottom-width: 7px;
-                outline: none;
-            }
-    }
-
-    .delete {
+    .delete{
         background-color: #b95071;
     }
 
@@ -118,6 +109,7 @@
         text-align: center;
     }
 }
+
 
 #forbidden {
     display: flex;
@@ -131,7 +123,7 @@
             color: var(--gold);
             margin: 3rem;
     }
-    
+
     .forbidden-subtitle {
         font-weight: 500;
         font-size: 3rem;
