--- a/Front/src/app/components/partials/product/product.component.html
+++ b/Front/src/app/components/partials/product/product.component.html
@@ -1,15 +1,28 @@
-<div class="product-container">
-    <div class="image-container">
-        <img src="../../../../assets/images/{{ image }}" alt="{{ product.name }}" class="product-image">
-    </div>
-    <div class="informations-container">
-        <h2>{{product.name}}</h2>
-        <p>{{product.description}}</p>
-        <p>{{product.price/100}} €</p>
-        <div class="controls">
-            <a routerLink="../../products" class="back-btn">Back</a>
-            <a *ngIf="isOwnProduct" routerLink="../../product/modify/{{ product._id }}" class="modify-btn">Modify</a>
-            <a *ngIf="isOwnProduct" routerLink="../../product/delete/{{ product._id }}" class="delete-btn">Delete</a>
+<div class="wrapper">
+    <div class="product-container">
+        <div class="title">
+            <h1>Product</h1>
+            <hr />
+        </div>
+        <div class="image-container">
+            <img src="../../../../assets/images/{{ image }}" alt="{{ product.name }}" class="product-image">
+        </div>
+        <div class="informations-container">
+            <h1>{{product.name}}</h1>
+            <hr class="hr-title" />
+            <p class="showcase">Product description :</p>
+            <p class="text">{{product.description}}</p>
+            <hr class="hr-info" />
+            <p class="showcase">Product price :</p>
+            <p class="text">{{product.price/100}} €</p>
+            <hr class="hr-info" />
+            <div class="controls">
+                <a routerLink="../../products" class="back-btn">Back</a>
+                <a *ngIf="isOwnProduct" routerLink="../../product/modify/{{ product._id }}"
+                    class="modify-btn">Modify</a>
+                <a *ngIf="isOwnProduct" routerLink="../../product/delete/{{ product._id }}"
+                    class="delete-btn">Delete</a>
+            </div>
         </div>
     </div>
 </div>
