--- a/Front/src/app/components/partials/product/product.component.scss
+++ b/Front/src/app/components/partials/product/product.component.scss
@@ -1,29 +1,92 @@
+.wrapper {
+    display: flex;
+    justify-content: center;
+    // min-width: 1000px;
+}
 .product-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    background-color: whitesmoke;
     column-gap: 5rem;
-    max-width: 100rem;
-    margin: auto;
+    border: 0.3rem solid;
+    border-radius: 3rem;
+    margin: 3rem 0 3rem 0;
+    padding: 5rem 2rem 5rem 2rem;
+    width: 50%;
+    min-width: 500px;
 
-    padding: 10rem 2rem;
+    .title {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+
+        h1 {
+            margin: 0 0 0 0;
+            font-size: 5rem;
+            align-self: center;
+        }
+
+        hr {
+            width: 100%;
+            margin-bottom: 6rem;
+        }
+    }
 
     .image-container {
-        max-width: 50rem;
-        min-width: 30rem;
+        max-width: 35rem;
+        min-width: 35rem;
 
         img {
             width: 100%;
+            border: 0.3rem solid;
+            border-radius: 2rem;
         }
     }
 
     .informations-container {
         display: flex;
         flex-flow: column;
+        width: 80%;
+        border: 0.1rem solid;
+        margin-top: 3rem;
+        border-radius: 5rem;
+        padding: 0.7rem 2rem 2rem 2rem;
+        background-color: rgb(242, 240, 240);
 
-        width: 100%;
+        .hr-info {
+            margin: 0.2rem 0 2rem 0;
+            width: 100%;
+            color: black;
+        }
+
+        .hr-title {
+            margin: 0.2rem 0 4rem 0;
+            width: 100%;
+            color: black;
+        }
+
+        h1 {
+            font-size: 3.5rem;
+            margin: 4rem 0 0 0;
+        }
+
+        .text {
+            margin: 0.4rem 0 0 0;
+        }
+
+        .showcase {
+            font-size: small;
+            color: gray;
+            margin-bottom: 0.2rem;
+        }
 
         .controls {
             display: flex;
+            justify-content: center;
             flex-flow: row wrap;
+            margin-top: 3rem;
             column-gap: 1rem;
             row-gap: 1rem;
 
@@ -44,7 +107,7 @@
             }
 
             .back-btn {
-                background: grey;
+                background: rgb(122, 162, 184);
             }
 
             .delete-btn {
