--- a/Front/src/app/components/pages/me/me.component.scss
+++ b/Front/src/app/components/pages/me/me.component.scss
@@ -23,7 +23,8 @@
     .title {
         color: var(--dark);
         text-align: center;
-        border-bottom: 1px solid #eee;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #bebebe;
     }
 
     .create {
