--- a/Front/src/app/components/pages/create-product/create-product.component.html
+++ b/Front/src/app/components/pages/create-product/create-product.component.html
@@ -2,17 +2,20 @@
     <div class="new-product">
         <h1 class="title">Create a new product</h1>
         <div class="line">
+            <i class="fa-solid fa-car"></i>
             <input #name placeholder="Name of the product" class="input-form" type="text" id="name" name="name" />
         </div>
 
         <div class="line">
+            <i class="fa-solid fa-usd" style="padding: 0 4px 0 3px;"></i>
             <input #price placeholder="Price of the product in €" class="input-form" type="number" id="price" name="price" />
         </div>
 
         <div class="line">
+            <i class="fa-solid fa-commenting"></i>
             <input #description placeholder="Description of the product" class="input-form" type="text" id="desc" name="desc" />
         </div>
-        
+
         <button class="button" (click)="addProduct(userID, name.value, price.value, description.value)" type="button">
             Create Product!</button
         ><br />
