--- a/Front/src/app/components/pages/signup/signup.component.scss
+++ b/Front/src/app/components/pages/signup/signup.component.scss
@@ -24,7 +24,7 @@
         color: var(--dark);
         text-align: center;
         margin: 1rem 0 3rem 0;
-        border-bottom: 1px solid #eee;
+        border-bottom: 1px solid #bebebe;
         padding-bottom: 2rem;
     }
 
