--- a/Front/src/app/components/pages/me/me.component.scss
+++ b/Front/src/app/components/pages/me/me.component.scss
@@ -31,8 +31,8 @@
         background: #7187bc;
         border: none;
         color: #fff;
-        padding: 1.5rem 4rem;
-        width: 45%;
+        padding: 1.5rem 5rem;
+        width: 100%;
         border-radius: 1rem;
         cursor: pointer;
 
@@ -85,6 +85,7 @@
     .products-text {
         display: flex;
         justify-content: center;
+        margin-bottom: 2rem;
 
         .products-link {
             cursor: pointer;
@@ -103,7 +104,6 @@
         background: #7187bc;
         display: block;
         margin: auto;
-        margin-top: 3rem;
         border: none;
         border-radius: 1rem;
         border-bottom-width: 7px;
