--- a/Front/src/app/components/pages/user/user.component.html
+++ b/Front/src/app/components/pages/user/user.component.html
@@ -9,13 +9,14 @@
             <p *ngIf="targetUser.role == 'admin'" class="admin-text">Admin</p>
             <div class="line">
                 <i class="fa-solid fa-at"></i>
-                <input #email autofocus value="{{ targetUser.email }}" class="input-form" type="text" id="email" name="email" />
+                <input #email autofocus value="{{ targetUser.email }}" class="input-form" type="text" id="email"
+                    name="email" />
             </div>
 
             <div class="line">
                 <i class="fa fa-user"></i>
-                <input #username value="{{ targetUser.username }}" class="input-form" type="text"
-                    id="username" name="username" />
+                <input #username value="{{ targetUser.username }}" class="input-form" type="text" id="username"
+                    name="username" />
             </div>
 
             <div class="line">
@@ -29,10 +30,13 @@
                 <input #password placeholder="Password" class="input-form" type="password" id="password"
                     name="password" />
             </div>
-
-            <button class="button" (click)="userModify(username.value, email.value, adresse.value, '')">Modify
-                account</button>
-
+            <div style="display: flex; flex-direction: row; margin-top: 3rem;">
+                <button class="button" (click)="userModify(username.value, email.value, adresse.value, '')">Modify
+                    account</button>
+                <div style="display: flex; align-items: center; flex-direction: column;">
+                    <a routerLink="../newproduct/create" class="create">Create Product</a>
+                </div>
+            </div>
             <div class="products-text">
                 <p routerLink="/???" class="products-link">
                     <i class="fa-solid fa-eye"></i>
