--- a/Front/src/app/components/pages/user/user.component.scss
+++ b/Front/src/app/components/pages/user/user.component.scss
@@ -22,11 +22,13 @@
 
     .title {
         color: var(--dark);
+        font-size: 3.5rem;
         text-align: center;
-        border-bottom: 1px solid #eee;
+        padding-bottom: 10px;
+        border-bottom: 1px solid #bebebe;
     }
 
-    .admin-text{
+    .admin-text {
         color: var(--gold);
         background-color: var(--dark);
         font-weight: bold;
@@ -36,6 +38,25 @@
     i {
         color: var(--dark);
         margin: 0 1rem 0 0;
+    }
+
+    .create {
+        background: #7187bc;
+        border: none;
+        color: #fff;
+        padding: 1.5rem 5rem;
+        width: 100%;
+        border-radius: 1rem;
+        cursor: pointer;
+
+        &:hover {
+            box-shadow: 0 1px 3px #7187bc;
+        }
+
+        &:active {
+            border-bottom-width: 3px;
+            outline: none;
+        }
     }
 
     .line {
@@ -65,6 +86,7 @@
     .products-text {
         display: flex;
         justify-content: center;
+        margin-bottom: 2rem;
 
         .products-link {
             cursor: pointer;
@@ -83,7 +105,6 @@
         background: #7187bc;
         display: block;
         margin: auto;
-        margin-top: 3rem;
         border: none;
         border-radius: 1rem;
         border-bottom-width: 7px;
@@ -101,7 +122,7 @@
         }
     }
 
-    .delete{
+    .delete {
         background-color: #b95071;
     }
 
@@ -110,7 +131,6 @@
     }
 }
 
-
 #forbidden {
     display: flex;
     align-items: center;
@@ -118,10 +138,10 @@
     flex-direction: column;
 
     .forbidden-title {
-            font-weight: 700;
-            font-size: 20rem;
-            color: var(--gold);
-            margin: 3rem;
+        font-weight: 700;
+        font-size: 20rem;
+        color: var(--gold);
+        margin: 3rem;
     }
 
     .forbidden-subtitle {
@@ -131,4 +151,3 @@
         text-align: center;
     }
 }
-
