--- a/Front/src/app/components/pages/user-products/user-products.component.html
+++ b/Front/src/app/components/pages/user-products/user-products.component.html
@@ -1,15 +1,22 @@
-<h1 class="text-3xl font-bold underline">
-    Products from {{currentUser}} :
-</h1>
-<table class="simple-tab">
-    <tr>
-        <th>name</th>
-        <th>description</th>
-        <th>price</th>
-    </tr>
-    <tr *ngFor="let product of productList">
-        <td routerLink="../../product/{{ product._id }}">{{ product.name }}</td>
-        <td routerLink="../../product/{{ product._id }}">{{ product.description }}</td>
-        <td routerLink="../../product/{{ product._id }}">{{ product.price/100 }}€</td>
-    </tr>
-</table>
+<div class="title">
+    <h1>
+        Products from {{currentUser}} :
+    </h1>
+    <hr />
+</div>
+<div *ngIf="productList.length == 0">
+    It looks like none of our products corresponds to your search.
+</div>
+<div class="products-container">
+    <div routerLink="../../product/{{ product._id }}" class="product-card" *ngFor="let product of productList">
+        <div class="product-image">
+            <img src="../../../../assets/images/{{ images[product._id] }}" alt="{{ product.name }}">
+        </div>
+        <div class="product-text">
+            <h2 class="product-name">{{ product.name }}</h2>
+            <p class="product-description">{{ product.description }}</p>
+        </div>
+        <div class="product-details">
+            <span class="product-price">{{ product.price/100 }} €</span>
+        </div>
+    </div>
