fix - Fixed the products/user endpoint

--- a/Front/src/app/components/pages/user/user.component.html
+++ b/Front/src/app/components/pages/user/user.component.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="products-text">
-                <p routerLink="/???" class="products-link">
+                <p routerLink="/products/{{ paramID }}" class="products-link">
                     <i class="fa-solid fa-eye"></i>
                     See all of {{ targetUser.username }} products !
                 </p>
