fix - Fixed the delete endpoint

--- a/Front/src/app/components/pages/delete-product/delete-product.component.html
+++ b/Front/src/app/components/pages/delete-product/delete-product.component.html
@@ -1,3 +1,7 @@
-<p>Are you sure ?</p>
-<button (click)="productDelete()" type="button">Delete!</button><br />
-<p>{{ message }}</p>
+<div class="wrapper">
+    <div class="inner">
+        <p class="title">Are you sure ?</p>
+        <p class="message">{{ message }}</p>
+        <button (click)="productDelete()" type="button">Delete!</button><br />
+    </div>
+</div>
