--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -37,7 +37,11 @@ html {
 
 body {
     // background-color: #353535;
-    background-color:  #7497c3;
+    // background-color:  #7497c3;
+    background: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)), url('./assets/images/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.8rem;
     margin: 0;
