--- a/Front/src/app/components/pages/products/products.component.html
+++ b/Front/src/app/components/pages/products/products.component.html
@@ -1,5 +1,7 @@
-<h1>{{ catchPhrase }}</h1>
-<h3>Discover our collection of high end cars</h3>
+<div class="title">
+    <h1>{{ catchPhrase }}</h1>
+    <h3>Discover our collection of high end cars</h3>
+</div>
 <div id="sort-options">
     <input type="text" placeholder="🔎 Search..." name="search" class='search-bar' [(ngModel)]="searchString"
         (input)="updateResult()">
