--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -2,28 +2,40 @@ app-products {
     padding: 0 1rem;
 }
 
+.title {
+    display: flex;
+    flex-direction: column;
+    padding-left: 3rem;
+
+    h1 {
+        margin-bottom: 0.5rem;
+    }
+}
+
 #sort-options {
     display: flex;
     flex-flow: row wrap;
+    padding: 3rem 4rem;
     justify-content: space-between;
     column-gap: 1rem;
     row-gap: 1rem;
     margin: 1rem;
 
     .search-bar {
+        justify-self: center;
         border-radius: 1rem;
-        border: solid 3px var(--dark);
-        background-color: var(--cream);
+        border: solid 1px var(--dark);
+        background-color: #ebeae5c8;
         color: var(--light);
         padding: 0.5rem 1rem;
         font-size: large;
 
         &:focus {
             outline: none;
-            border: solid 3px var(--dark);
+            border: solid 2px var(--dark);
+            background-color: #ebeae5;
         }
     }
-
 
     .right-options {
         display: flex;
@@ -44,7 +56,7 @@ app-products {
                 color: var(--gold);
                 outline: none;
 
-                input[type=text] {
+                input[type="text"] {
                     text-align: center;
                     border: none;
                     width: 80px;
@@ -56,7 +68,6 @@ app-products {
                     &:focus {
                         outline: none;
                         border-style: none;
-
                     }
                 }
             }
@@ -86,7 +97,11 @@ app-products {
             row-gap: 1rem;
 
             .option-btn {
-                background: linear-gradient(163deg, var(--light) 0%, var(--dark) 61%);
+                background: linear-gradient(
+                    163deg,
+                    var(--light) 0%,
+                    var(--dark) 61%
+                );
                 border: none;
                 color: #fff;
                 padding: 15px 4rem;
@@ -96,7 +111,11 @@ app-products {
                 align-self: center;
 
                 &:hover {
-                    background: linear-gradient(163deg, var(--gold) 10%, var(--light-gold));
+                    background: linear-gradient(
+                        163deg,
+                        var(--gold) 10%,
+                        var(--light-gold)
+                    );
                     transform: scale(1.05);
                     color: black;
                 }
@@ -109,9 +128,10 @@ app-products {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
+    padding: 0 10rem;
     justify-content: space-evenly;
     row-gap: 5rem;
-    column-gap: 2rem;
+    column-gap: 4rem;
     margin: 2rem 1rem;
 
     .product-card {
@@ -129,7 +149,7 @@ app-products {
         .product-image {
             width: 100%;
             height: 200px;
-            img{
+            img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
@@ -139,7 +159,11 @@ app-products {
         .product-text {
             padding: 0rem 1rem 1rem 1rem;
             background: var(--cream);
-            background: linear-gradient(180deg, var(--cream) 85%, rgba(0, 41, 107, 1) 100%);
+            background: linear-gradient(
+                180deg,
+                var(--cream) 85%,
+                rgba(0, 41, 107, 1) 100%
+            );
             .product-name {
                 font-size: 18px;
                 font-weight: bold;
@@ -152,7 +176,6 @@ app-products {
                 margin: 10px 0;
             }
         }
-
 
         .product-details {
             display: flex;
