--- a/Front/src/app/components/pages/products/products.component.html
+++ b/Front/src/app/components/pages/products/products.component.html
@@ -1,29 +1,32 @@
-<div class="title">
-    <h1>{{ catchPhrase }}</h1>
-    <h3>Discover our collection of high end cars</h3>
-</div>
-<div id="sort-options">
-    <input type="text" placeholder="🔎 Search..." name="search" class='search-bar' [(ngModel)]="searchString"
-        (input)="updateResult()">
-    <div class="right-options">
-        <div class="slider-container">
-            <div class="text-input">
-                <input type="text" name="limit" [(ngModel)]="priceRange" (change)="updateResult()">
-                €
+<div class="wrapper">
+    <div class="title">
+        <h1>{{ catchPhrase }}</h1>
+        <h3>Discover our collection of high end cars</h3>
+    </div>
+    <div id="sort-options">
+        <input type="text" placeholder="🔎 Search..." name="search" class='search-bar' [(ngModel)]="searchString"
+            (input)="updateResult()">
+        <div class="right-options">
+            <div class="slider-container">
+                <div class="text-input">
+                    <input type="text" name="limit" [(ngModel)]="priceRange" (change)="updateResult()">
+                    €
+                </div>
+                <input type="range" min="0" max={{maxPriceRange}} value={{maxPriceRange}} step="100" class="slider"
+                    id="price-range" [(ngModel)]="priceRange" (change)="updateResult()">
             </div>
-            <input type="range" min="0" max={{maxPriceRange}} value={{maxPriceRange}} step="100" class="slider"
-                id="price-range" [(ngModel)]="priceRange" (change)="updateResult()">
-        </div>
-        <div class="filters">
-            <button (click)="sortByAscendingPrice()" type="button" class="option-btn">
-                <i class="fa-solid fa-arrow-up-short-wide"></i>
-            </button>
-            <button (click)="sortByDescendingPrice()" type="button" class="option-btn">
-                <i class="fa-solid fa-arrow-down-wide-short"></i>
-            </button>
+            <div class="filters">
+                <button (click)="sortByAscendingPrice()" type="button" class="option-btn">
+                    <i class="fa-solid fa-arrow-up-short-wide"></i>
+                </button>
+                <button (click)="sortByDescendingPrice()" type="button" class="option-btn">
+                    <i class="fa-solid fa-arrow-down-wide-short"></i>
+                </button>
+            </div>
         </div>
     </div>
 </div>
+<hr style="width: 80%; margin-bottom: 10rem;"/>
 <div *ngIf="resultList.length == 0">
     It looks like none of our products corresponds to your search.
 </div>
