--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -2,147 +2,184 @@ app-products {
     padding: 0 1rem;
 }
 
-.title {
+.wrapper {
     display: flex;
-    flex-direction: column;
-    padding-left: 3rem;
-
-    h1 {
-        margin-bottom: 0.5rem;
-    }
-}
-
-#sort-options {
-    display: flex;
-    flex-flow: row wrap;
-    padding: 3rem 4rem;
     justify-content: space-between;
-    column-gap: 1rem;
-    row-gap: 1rem;
-    margin: 1rem;
+    margin: 5rem 5rem 5rem 5rem;
 
-    .search-bar {
-        justify-self: center;
+    .title {
+        display: flex;
+        flex-direction: column;
+        padding-left: 3rem;
+        width: 45%;
+        margin: 1rem;
+        border: 1px solid;
         border-radius: 1rem;
-        border: solid 1px var(--dark);
-        background-color: #ebeae5c8;
-        color: var(--light);
-        padding: 0.5rem 1rem;
-        font-size: large;
+        border-color: rgba(0, 0, 0, 0.499);
+        background-color: rgba(255, 255, 255, 0.275);
+        backdrop-filter: blur(9px);
 
-        &:focus {
-            outline: none;
-            border: solid 2px var(--dark);
-            background-color: #ebeae5;
+        h1 {
+            margin-bottom: 0.5rem;
         }
     }
 
-    .right-options {
+    #sort-options {
         display: flex;
         flex-flow: row wrap;
-        justify-content: center;
+        padding: 3rem 4rem;
+        align-items: end;
         column-gap: 1rem;
         row-gap: 1rem;
+        margin: 1rem;
 
-        .slider-container {
-            display: flex;
-            flex-flow: column;
-            justify-content: space-between;
-            align-items: center;
+        .search-bar {
+            justify-self: center;
+            border-radius: 1rem;
+            border: solid 1px var(--dark);
+            background-color: #c8c7c2;
+            color: var(--light);
+            padding: 0.5rem 1rem;
+            font-size: large;
+            width: 300px;
+            height: 50px;
+            margin-right: 4rem;
 
-            .text-input {
-                font-size: 16px;
-                font-weight: bold;
-                color: var(--gold);
+            &:focus {
                 outline: none;
-
-                input[type="text"] {
-                    text-align: center;
-                    border: none;
-                    width: 80px;
-                    color: var(--gold);
-                    background-color: #7497c3;
-                    font-size: 16px;
-                    font-weight: bold;
-
-                    &:focus {
-                        outline: none;
-                        border-style: none;
-                    }
-                }
-            }
-
-            .slider {
-                width: 20rem;
-                height: 10px;
-                background: var(--light);
-                border-radius: 1rem;
-                outline: none;
-                margin: 1rem 0;
-                cursor: pointer;
-
-                &::-moz-range-thumb {
-                    width: 25px;
-                    height: 17px;
-                    background: var(--gold);
-                }
+                border: solid 2px var(--dark);
+                background-color: #ebeae5;
             }
         }
 
-        .filters {
+        .right-options {
             display: flex;
             flex-flow: row wrap;
             justify-content: center;
             column-gap: 1rem;
+            padding: 2rem;
             row-gap: 1rem;
+            border: 1px solid;
+            border-radius: 1rem;
+            border-color: rgba(0, 0, 0, 0.077);
+            background-color: rgba(255, 255, 255, 0.059);
+            backdrop-filter: blur(1px);
 
-            .option-btn {
-                background: linear-gradient(
-                    163deg,
-                    var(--light) 0%,
-                    var(--dark) 61%
-                );
-                border: none;
-                color: #fff;
-                padding: 15px 4rem;
-                border-radius: 22px;
-                box-shadow: 0 4px 8px 0 var(--hard-shadow-color);
-                cursor: pointer;
-                align-self: center;
+            .slider-container {
+                display: flex;
+                flex-flow: column;
+                justify-content: space-between;
+                align-items: center;
 
-                &:hover {
+                .text-input {
+                    font-size: 16px;
+                    font-weight: bold;
+                    color: var(--gold);
+                    outline: none;
+
+                    input[type="text"] {
+                        text-align: center;
+                        border: none;
+                        width: 80px;
+                        color: var(--gold);
+                        background-color: transparent;
+                        font-size: 16px;
+                        font-weight: bold;
+
+                        &:focus {
+                            outline: none;
+                            border-style: none;
+                        }
+                    }
+                }
+
+                .slider {
+                    width: 20rem;
+                    height: 10px;
+                    background: var(--light);
+                    border-radius: 1rem;
+                    outline: none;
+                    margin: 1rem 0;
+                    cursor: pointer;
+
+                    &::-moz-range-thumb {
+                        width: 25px;
+                        height: 17px;
+                        background: var(--gold);
+                    }
+                }
+            }
+
+            .filters {
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: center;
+                column-gap: 1rem;
+                row-gap: 1rem;
+
+                .option-btn {
                     background: linear-gradient(
                         163deg,
-                        var(--gold) 10%,
-                        var(--light-gold)
+                        var(--light) 0%,
+                        var(--dark) 61%
                     );
-                    transform: scale(1.05);
-                    color: black;
+                    border: none;
+                    color: #fff;
+                    padding: 15px 4rem;
+                    border-radius: 22px;
+                    box-shadow: 0 4px 8px 0 var(--hard-shadow-color);
+                    cursor: pointer;
+                    align-self: center;
+
+                    &:hover {
+                        background: linear-gradient(
+                            163deg,
+                            var(--gold) 10%,
+                            var(--light-gold)
+                        );
+                        transform: scale(1.05);
+                        color: black;
+                    }
                 }
             }
         }
     }
+
 }
 
 .products-container {
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    padding: 0 10rem;
     justify-content: space-evenly;
     row-gap: 5rem;
     column-gap: 4rem;
-    margin: 2rem 1rem;
+    margin: 1rem 15rem 5rem 15rem;
+    border: 1px solid;
+    border-color: rgba(98, 98, 98, 0.286);
+    border-radius: 1rem;
+    backdrop-filter: blur(5px);
+    background-color: rgba(122, 115, 151, 0.089);
+    padding: 7rem;
 
     .product-card {
         &:hover {
             transform: scale(1.05);
+            box-shadow: 10px 10px 15px black;
+            transition: 0.2s;
         }
 
+        &:active {
+            transform: scale(0.95);
+        }
+
+        transition: 0.1s;
         width: 300px;
         background-color: var(--cream);
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         border-radius: 2rem;
+        border: 4px groove;
+        border-color: rgba(89, 89, 89, 0.405);
         overflow: hidden;
         cursor: pointer;
 
