--- a/Front/src/app/components/partials/product/product.component.scss
+++ b/Front/src/app/components/partials/product/product.component.scss
@@ -103,6 +103,12 @@
                     background: linear-gradient(163deg, var(--gold) 10%, var(--light-gold));
                     transform: scale(1.05);
                     color: black;
+                    transition: 0.2s;
+                }
+
+                &:active {
+                    transform: scale(0.98);
+                    transition: 0.1s;
                 }
             }
 
