--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -38,14 +38,15 @@ html {
 body {
     // background-color: #353535;
     // background-color:  #7497c3;
-    background: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)), url('./assets/images/background.jpg');
+    background: url('./assets/images/GarageBackground2.png');
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: inherit;
+    background-position: 0%;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.8rem;
     margin: 0;
-    height: 100%;
+    // height: 100%;
 }
 
 main {
