fix - Final esthetics fix

--- a/Front/src/app/components/pages/create-product/create-product.component.html
+++ b/Front/src/app/components/pages/create-product/create-product.component.html
@@ -19,6 +19,6 @@
         <button class="button" (click)="addProduct(userID, name.value, price.value, description.value)" type="button">
             Create Product!</button
         ><br />
-    <p>{{message}}</p>
+    <p class="message">{{message}}</p>
     </div>
 </div>
