--- a/Front/src/app/components/pages/delete-product/delete-product.component.scss
+++ b/Front/src/app/components/pages/delete-product/delete-product.component.scss
@@ -11,7 +11,8 @@
         padding: 2rem 25rem 5rem 25rem;
         border: 1px solid;
         border-color: rgb(85, 73, 57);
-        background-color: aliceblue;
+        background-color: rgba(240, 248, 255, 0.635);
+        backdrop-filter: blur(9px);
         border-radius: 5rem;
         max-height: 450px;
 
