--- a/Front/src/app/components/partials/modify-product/modify-product.component.html
+++ b/Front/src/app/components/partials/modify-product/modify-product.component.html
@@ -22,6 +22,6 @@
 
         <button class="button" (click)="changeProduct(name.value, price.value, description.value)" type="button">
             Modify Product!</button><br />
-        <p style="align-self: center;">{{message}}</p>
+        <p class="message">{{message}}</p>
     </div>
 </div>
