--- a/Front/src/app/components/partials/modify-product/modify-product.component.scss
+++ b/Front/src/app/components/partials/modify-product/modify-product.component.scss
@@ -103,15 +103,20 @@
         border-bottom-width: 7px;
         color: #fff;
         font-size: large;
+        transition: 0.2s;
         cursor: pointer;
 
         &:hover {
+            transform: scale(1.01);
             box-shadow: 0 1px 3px #7187bc;
+            transition: 0.2s;
         }
 
         &:active {
+            transform: scale(0.95);
             border-bottom-width: 3px;
             outline: none;
+            transition: 0.2s;
         }
     }
 
@@ -121,5 +126,16 @@
 
     .message {
         text-align: center;
+        align-self: center;
+        margin-bottom: 8rem;
+        padding: 1rem;
+        border: 1px solid;
+        border-radius: 18px;
+        border-color: rgb(121, 121, 121);
+        font-size: 2rem;
+        min-width: 220px;
+        max-width: 400px;
+        min-height: 45px;
+        position: static;
     }
 }
