--- a/Front/src/app/components/pages/products/products.component.scss
+++ b/Front/src/app/components/pages/products/products.component.scss
@@ -28,7 +28,7 @@ app-products {
         display: flex;
         flex-flow: row wrap;
         padding: 3rem 4rem;
-        align-items: end;
+        align-items: flex-end;
         column-gap: 1rem;
         row-gap: 1rem;
         margin: 1rem;
